--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +18,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - images/bandera_ecuador.png
+    - images/escudo_ecuador.png
+    - images/bandera_colombia.png
+    - images/escudo_colombia.jpeg
+    - images/bandera_peru.jpg
+    - images/escudo_peru.png
